nodebase/config/iptables
*filter
:INPUT ACCEPT 
:FORWARD ACCEPT
:OUTPUT ACCEPT 
:BLACKLIST - 
:LOGDROP - 
:ssh - [0:0]

-A OUTPUT -j BLACKLIST
-A LOGDROP -j LOG
-A LOGDROP -j DROP

# Restrict ssh
-A INPUT -p tcp --dport 22 -j ssh

# MPI-SWS
-A ssh -s 139.19.0.0/16 -j RETURN

# Stephen Stuart's Nagios setup
-A ssh -s 149.20.53.171/32 -j RETURN

# Internet2
-A ssh -s 198.108.5.0/24 -j RETURN
-A ssh -s 192.52.179.0/24 -j RETURN
-A ssh -s 207.75.164.0/23 -j RETURN
-A ssh -s 64.57.16.0/20 -j RETURN

# UW
-A ssh -s 128.208.2.0/24 -j RETURN
-A ssh -s 128.208.4.0/24 -j RETURN

# GT
-A ssh -s 130.207.8.0/24 -j RETURN
-A ssh -s 143.215.131.0/24 -j RETURN
-A ssh -s 143.215.129.0/24 -j RETURN
-A ssh -s 130.207.97.0/24 -j RETURN

# Princeton
-A ssh -s 128.112.139.0/24 -j RETURN
-A ssh -s 128.112.155.0/24 -j RETURN

# SamKnows
-A ssh -s 188.220.56.117/32 -j RETURN
-A ssh -s 87.194.125.86/32 -j RETURN
-A ssh -s 78.129.213.196/32 -j RETURN
-A ssh -m iprange --src-range 207.150.205.158-207.150.205.170 -j RETURN

# Nagios
-A ssh -s 64.9.225.190 -j RETURN
-A ssh -s 64.9.225.99  -j RETURN

-A ssh -j REJECT
COMMIT

*mangle
:PREROUTING ACCEPT 
:INPUT ACCEPT 
:FORWARD ACCEPT 
:OUTPUT ACCEPT 
:POSTROUTING ACCEPT 
-A INPUT -j MARK --copy-xid 0x0
-A POSTROUTING -j MARK --copy-xid 0x0 
-A POSTROUTING -j CLASSIFY --set-class 0001:1000 --add-mark
-A POSTROUTING -o eth0 -j ULOG --ulog-cprange 54 --ulog-qthreshold 16
COMMIT
